--- a/src/app/pages/login/login.html
+++ b/src/app/pages/login/login.html
@@ -62,14 +62,6 @@
         </div>
       </div>
 
-      <div class="form-options">
-        <label class="remember-me">
-          <input type="checkbox" />
-          <span>Se souvenir de moi</span>
-        </label>
-        <a href="#" class="forgot-password">Mot de passe oublié ?</a>
-      </div>
-
       <div class="error-message error-alert" *ngIf="errorMessage">
         <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
           <circle cx="12" cy="12" r="10"/>
@@ -89,15 +81,14 @@
         <span *ngIf="loading" class="spinner"></span>
       </button>
     </form>
-
+    <div class="form-options">
+        <a href="#" class="forgot-password">Mot de passe oublié ?</a>
+      </div>
     <div class="divider">
       <span>ou</span>
     </div>
 
-    <div class="register-section">
-      <p>Pas encore de compte ?</p>
-      <a routerLink="/register" class="btn-register">Créer un compte</a>
-    </div>
+      <p class="register-section">Vous n'avez pas de compte ? <a routerLink="/register"> Inscrivez-vous</a> </p>
   </div>
 
   <div class="background-pattern">
