--- a/src/app/pages/register/register.css
+++ b/src/app/pages/register/register.css
@@ -64,6 +64,7 @@
 }
 
 .register-card {
+  margin-top: 0rem;
   background: white;
   padding: 3rem;
   border-radius: 16px;
@@ -79,7 +80,7 @@
 
 /* Scrollbar personnalisée */
 .register-card::-webkit-scrollbar {
-  width: 8px;
+  width: 6px;
 }
 
 .register-card::-webkit-scrollbar-track {
@@ -108,28 +109,13 @@
 }
 
 .register-header {
+  margin-top: 0rem;
   text-align: center;
-  margin-bottom: 2.5rem;
-}
-
-.logo {
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
-  width: 70px;
-  height: 70px;
-  background: linear-gradient(135deg, #42a5f5 0%, #2196f3 100%);
-  border-radius: 16px;
-  margin-bottom: 1.5rem;
-  box-shadow: 0 8px 16px rgba(33, 150, 243, 0.3);
-}
-
-.logo svg {
-  color: white;
+  margin-bottom: 0.5rem;
 }
 
 .register-header h2 {
-  color: #1e293b;
+  color: #42a5f5;
   font-size: 2rem;
   margin-bottom: 0.5rem;
   font-weight: 700;
@@ -138,11 +124,11 @@
 .subtitle {
   color: #64748b;
   font-size: 1rem;
-  margin: 0;
+  margin-top: 0;
 }
 
 .form-group {
-  margin-bottom: 1.5rem;
+  margin-bottom: 1rem;
 }
 
 label {
@@ -179,15 +165,6 @@ select {
   transition: all 0.3s ease;
   background-color: #f8fafc;
   color: #1e293b;
-}
-
-select {
-  cursor: pointer;
-  appearance: none;
-  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' viewBox='0 0 24 24' fill='none' stroke='%2394a3b8' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3E%3Cpolyline points='6 9 12 15 18 9'%3E%3C/polyline%3E%3C/svg%3E");
-  background-repeat: no-repeat;
-  background-position: right 1rem center;
-  padding-right: 3rem;
 }
 
 input:focus,
@@ -422,7 +399,7 @@ select.input-error {
   display: flex;
   align-items: center;
   text-align: center;
-  margin: 2rem 0;
+  margin: 0.5rem 0;
   color: #94a3b8;
 }
 
@@ -443,30 +420,20 @@ select.input-error {
   text-align: center;
 }
 
-.login-section p {
+.login-section{
   color: #64748b;
-  margin-bottom: 1rem;
+  margin-bottom: 0rem;
   font-size: 0.95rem;
 }
-
-.btn-login {
-  display: inline-block;
-  padding: 0.75rem 2rem;
-  background: white;
+.login-section a {
   color: #42a5f5;
-  border: 2px solid #42a5f5;
-  border-radius: 10px;
-  text-decoration: none;
   font-weight: 600;
-  transition: all 0.3s ease;
+  text-decoration: none;
+}
+.login-section a:hover {
+  text-decoration: underline;
 }
 
-.btn-login:hover {
-  background: #42a5f5;
-  color: white;
-  transform: translateY(-2px);
-  box-shadow: 0 4px 12px rgba(66, 165, 245, 0.3);
-}
 
 /* Responsive */
 @media (max-width: 768px) {
