ajout de la partie users

--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -46,7 +46,7 @@
                     <i class="ri-folder-3-fill"></i>
                     <span class="link-text">Thèmes</span>
                 </a>
-                <a routerLink="/home/utilisateurs" routerLinkActive="active" (click)="closeSidebarOnMobile()">
+                <a routerLink="/home/users" routerLinkActive="active" (click)="closeSidebarOnMobile()">
                     <i class="ri-group-fill"></i>
                     <span class="link-text">Utilisateurs</span>
                 </a>
