--- a/src/app/pages/dashboard/dashboard.html
+++ b/src/app/pages/dashboard/dashboard.html
@@ -207,7 +207,7 @@
           </div>
         </a>
 
-        <a routerLink="/analyses" class="action-card">
+        <a routerLink="/home/analyses" class="action-card">
           <div class="action-icon">
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
               <line x1="12" y1="20" x2="12" y2="10"/>
@@ -221,7 +221,7 @@
           </div>
         </a>
 
-        <a routerLink="/themes" class="action-card">
+        <a routerLink="/home/themes" class="action-card">
           <div class="action-icon">
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
               <path d="M22 19a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h5l2 3h9a2 2 0 0 1 2 2z"/>
